report design changes

--- a/WebTool-AI/Views/Assessor/Dashboard.cshtml
+++ b/WebTool-AI/Views/Assessor/Dashboard.cshtml
@@ -7,7 +7,7 @@
     <h4 class="title">Users</h4>
 </div>
 <div class="row">
-    <div class="col-lg-4 col-sm-6">
+    <div class="col-lg-3 col-sm-6">
         <div class="card">
             <div class="content">
                 <div class="row">
@@ -18,7 +18,7 @@
                     </div>
                     <div class="col-xs-7">
                         <div class="numbers">
-                            <p>Total Users</p>
+                            <p>Total<br />Users</p>
                             100
                         </div>
                     </div>
@@ -32,7 +32,7 @@
             </div>
         </div>
     </div>
-    <div class="col-lg-4 col-sm-6">
+    <div class="col-lg-3 col-sm-6">
         <div class="card">
             <div class="content">
                 <div class="row">
@@ -57,7 +57,7 @@
             </div>
         </div>
     </div>
-    <div class="col-lg-4 col-sm-6">
+    <div class="col-lg-3 col-sm-6">
         <div class="card">
             <div class="content">
                 <div class="row">
@@ -82,7 +82,19 @@
             </div>
         </div>
     </div>
-
+    <div class="col-lg-3 col-sm-6">
+        <div class="card">
+            <div class="content">
+               <div id="chartPreferences"></div>
+                <div class="footer">
+                    <hr />
+                    <div class="stats">
+                        <i class="ti-calendar"></i> Last day
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <div class="header">
     <h4 class="title">Your Progress</h4>
@@ -113,7 +125,7 @@
         </div>
     </div>
  </div>
-<div class="header">
+@*<div class="header">
     <h4 class="title">Informational Charts</h4>
 </div>
 <div class="row">
@@ -135,4 +147,4 @@
             </div>
         </div>
     </div>
-</div>
+</div>*@
