--- a/WebTool-AI/Content/paper-dashboard.css
+++ b/WebTool-AI/Content/paper-dashboard.css
@@ -4149,7 +4149,7 @@ textarea{
 .expand:focus {
     height: 10em;
 }
-#chartdiv, #chartdiv2{
+#chartdiv, #chartdiv2, #chartdiv3{
     width: 100%;
     height: 500px;
 }      
