report design changes

--- a/WebTool-AI/Views/Assessor/Report.cshtml
+++ b/WebTool-AI/Views/Assessor/Report.cshtml
@@ -490,6 +490,16 @@
                                     </div>
                                 </p>
                                 <textarea class="expand" rows="1" placeholder="Enter Comments...."></textarea>
+                                <p>
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            Impact Score
+                                            <div class="slider-assessor" style="margin-top:20px;">
+                                                <div id="custom-handle" class="ui-slider-handle"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </p>
                             </td>
                         </tr>
                         <tr>
@@ -521,6 +531,16 @@
                                     </div>
                                 </p>
                                 <textarea class="expand" rows="1" placeholder="Enter Comments...."></textarea>
+                                <p>
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            Score
+                                            <div class="slider-assessor" style="margin-top:20px;">
+                                                <div id="custom-handle" class="ui-slider-handle"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </p>
                             </td>
                         </tr>
                         <tr>
