--- a/WebTool-AI/Views/Assessor/Report.cshtml
+++ b/WebTool-AI/Views/Assessor/Report.cshtml
@@ -500,6 +500,7 @@
                                         </div>
                                     </div>
                                 </p>
+                                <textarea class="expand" rows="1" placeholder="Enter Comments...."></textarea>
                             </td>
                         </tr>
                         <tr>
@@ -534,13 +535,14 @@
                                 <p>
                                     <div class="row">
                                         <div class="col-lg-12">
-                                            Score
+                                            Impact Score
                                             <div class="slider-assessor" style="margin-top:20px;">
                                                 <div id="custom-handle" class="ui-slider-handle"></div>
                                             </div>
                                         </div>
                                     </div>
                                 </p>
+                                <textarea class="expand" rows="1" placeholder="Enter Comments...."></textarea>
                             </td>
                         </tr>
                         <tr>
