--- a/WebTool-AI/Content/paper-dashboard.css
+++ b/WebTool-AI/Content/paper-dashboard.css
@@ -4152,4 +4152,9 @@ textarea{
 #chartdiv, #chartdiv2, #chartdiv3{
     width: 100%;
     height: 500px;
-}      
+}
+.btn-primary:active:hover, .btn-primary.active:hover, .open > .dropdown-toggle.btn-primary:hover, .btn-primary:active:focus, .btn-primary.active:focus, .open > .dropdown-toggle.btn-primary:focus, .btn-primary:active.focus, .btn-primary.active.focus, .open > .dropdown-toggle.btn-primary.focus {
+    color: #fff;
+    background-color: #b98b1a;
+    border-color: #b98b1a;
+}
