--- a/WebTool-AI/Content/paper-dashboard.css
+++ b/WebTool-AI/Content/paper-dashboard.css
@@ -4090,10 +4090,16 @@ border-radius: 50%;
     }
 .slider-impact {
     background: red !important; /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(left, red, yellow, green) !important; /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(left, red, yellow, green) !important;
-    * For Opera 11.1 to 12.0 */ background: -moz-linear-gradient(left, red, yellow, green) !important; /* For Firefox 3.6 to 15 */
-    background: linear-gradient(left, red, yellow, green) !important; /* Standard syntax */
+    background: -webkit-linear-gradient(red, yellow, green) !important; /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(red, yellow, green) !important;
+    * For Opera 11.1 to 12.0 */ background: -moz-linear-gradient(red, yellow, green) !important; /* For Firefox 3.6 to 15 */
+    background: linear-gradient(red, yellow, green) !important; /* Standard syntax */
+    height: 250px !important;
+    margin-left: 10px !important;
+    width: 15px !important;
+}
+.ui-slider-vertical .ui-slider-handle {
+    left: -.9em !important;
 }
 .slider-assessor {
     background: #b98b1a;
