--- a/WebTool-AI/Views/Assessor/Report.cshtml
+++ b/WebTool-AI/Views/Assessor/Report.cshtml
@@ -3,7 +3,9 @@
     ViewBag.Title = "Dashboard";
 }
 
-
+<div class="zoom">
+    <a  data-toggle="modal" data-target="#myModal2" class="zoom-fab zoom-btn-large" id="zoomBtn"><i class="fa fa-2x fa-save"></i></a>
+</div>
 <div class="row">
     <div class="header">
         <h4 class="title">Company Information</h4>
@@ -16,74 +18,74 @@
                         <h5><b>AWARD CATEGORY</b> : <img src="~/Images/award-category/corporate-governance.png" width="15px" /><span>  CORPORATE GOVERNANCE</span></h5>
                     </div>
                     @*<div class="col-lg-6 assessorinfo">
-                        <h4>Company Details</h4>
-                        <table>
-                            <tbody>
-                                <tr>
-                                    <td><b>Company Name :</b></td>
-                                    <td>ABC Company</td>
-                                </tr>
-                                <tr>
-                                    <td><b>Postal Address :</b></td>
-                                    <td>P. O. Box: 40243, RAK Free Trade Zone, Ras Al Khaimah, United Arab Emirates</td>
-                                </tr>
-                                <tr>
-                                    <td><b>Company Website :</b></td>
-                                    <td><a href="http://msf.ae">http://msf.ae</a></td>
-                                </tr>
-                                <tr>
-                                    <td><b>Company Category :</b></td>
-                                    <td>Banking</td>
-                                </tr>
-                                <tr>
-                                    <td><b>Company Scale :</b></td>
-                                    <td>Large</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <h4>Primary Contact Information</h4>
-                        <table>
-                            <tbody>
-                                <tr>
-                                    <td><b>Name :</b></td>
-                                    <td>Samantha Benny</td>
-                                </tr>
-                                <tr>
-                                    <td><b>Email :</b></td>
-                                    <td><a href="mailto:info@arabinvestorawards.ae">info@arabinvestorawards.ae</a></td>
-                                </tr>
-                                <tr>
-                                    <td><b>Phone :</b></td>
-                                    <td>+971 4 222 2222</td>
-                                </tr>
-                                <tr>
-                                    <td><b>Designation :</b></td>
-                                    <td>Operational Manager</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <h4>Priority Scores</h4>
-                        <table>
-                            <tbody>
-                                <tr>
-                                    <td><b>Attainment as measured against authorised and licensed curriculum standards</b></td>
-                                    <td><b>25%</b></td>
-                                </tr>
-                                <tr>
-                                    <td><b>Attainment as measured against national and appropriate international standards</b></td>
-                                    <td><b>25%</b></td>
-                                </tr>
-                                <tr>
-                                    <td><b>Knowledge, skills and understanding, especially in the key subjects</b></td>
-                                    <td><b>25%</b></td>
-                                </tr>
-                                <tr>
-                                    <td><b>Trends in attainment over time</b></td>
-                                    <td><b>25%</b></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>*@
+                            <h4>Company Details</h4>
+                            <table>
+                                <tbody>
+                                    <tr>
+                                        <td><b>Company Name :</b></td>
+                                        <td>ABC Company</td>
+                                    </tr>
+                                    <tr>
+                                        <td><b>Postal Address :</b></td>
+                                        <td>P. O. Box: 40243, RAK Free Trade Zone, Ras Al Khaimah, United Arab Emirates</td>
+                                    </tr>
+                                    <tr>
+                                        <td><b>Company Website :</b></td>
+                                        <td><a href="http://msf.ae">http://msf.ae</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td><b>Company Category :</b></td>
+                                        <td>Banking</td>
+                                    </tr>
+                                    <tr>
+                                        <td><b>Company Scale :</b></td>
+                                        <td>Large</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <h4>Primary Contact Information</h4>
+                            <table>
+                                <tbody>
+                                    <tr>
+                                        <td><b>Name :</b></td>
+                                        <td>Samantha Benny</td>
+                                    </tr>
+                                    <tr>
+                                        <td><b>Email :</b></td>
+                                        <td><a href="mailto:info@arabinvestorawards.ae">info@arabinvestorawards.ae</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td><b>Phone :</b></td>
+                                        <td>+971 4 222 2222</td>
+                                    </tr>
+                                    <tr>
+                                        <td><b>Designation :</b></td>
+                                        <td>Operational Manager</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <h4>Priority Scores</h4>
+                            <table>
+                                <tbody>
+                                    <tr>
+                                        <td><b>Attainment as measured against authorised and licensed curriculum standards</b></td>
+                                        <td><b>25%</b></td>
+                                    </tr>
+                                    <tr>
+                                        <td><b>Attainment as measured against national and appropriate international standards</b></td>
+                                        <td><b>25%</b></td>
+                                    </tr>
+                                    <tr>
+                                        <td><b>Knowledge, skills and understanding, especially in the key subjects</b></td>
+                                        <td><b>25%</b></td>
+                                    </tr>
+                                    <tr>
+                                        <td><b>Trends in attainment over time</b></td>
+                                        <td><b>25%</b></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>*@
                     <div class="col-lg-12 assessorinfo">
                         <h4>Company Brief</h4>
                         <div class="row">
@@ -566,17 +568,17 @@
                 <div id="chartdiv"></div>
 
                 @*<div id="userchart" class="ct-chart"></div>
-                <div class="footer">
-                    <h5>Weekly Chart</h5>
-                    <div class="chart-legend">
-                        <i class="fa fa-circle text-info"></i> Completed Answers
-                        <i class="fa fa-circle text-warning"></i> Reviewd Answers
-                    </div>
-                    <hr>
-                    <div class="stats">
-                        <i class="ti-reload"></i> Updated 3 minutes ago
-                    </div>
-                </div>*@
+                    <div class="footer">
+                        <h5>Weekly Chart</h5>
+                        <div class="chart-legend">
+                            <i class="fa fa-circle text-info"></i> Completed Answers
+                            <i class="fa fa-circle text-warning"></i> Reviewd Answers
+                        </div>
+                        <hr>
+                        <div class="stats">
+                            <i class="ti-reload"></i> Updated 3 minutes ago
+                        </div>
+                    </div>*@
             </div>
         </div>
     </div>
@@ -670,3 +672,21 @@
     </div>
 </div>
 <div class="row main-submit" style="padding:10px;text-align:center;"><input type="submit" value="Submit" /></div>
+
+<div id="myModal2" class="modal warning-dialog fade" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-body" style="text-align:center;">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <i class="fa fa-4x fa-check-circle-o text-success" style="width:4em;"></i>
+                <h4 class="modal-title"><b>SAVED!</b></h4>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+
+    </div>
+</div>
