--- a/WebTool-AI/Views/Shared/Assessor.cshtml
+++ b/WebTool-AI/Views/Shared/Assessor.cshtml
@@ -8,12 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
     @Styles.Render("~/Content/tablecss")
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @Scripts.Render("~/bundles/arabinvestor")
-    @Scripts.Render("~/bundles/datatablejs")
-
+    @Styles.Render("~/Content/themes/base/css")
 </head>
 <body>
     <body>
@@ -148,8 +143,6 @@
 
 
     </body>
-
-
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryui")
     @Scripts.Render("~/bundles/bootstrap")
