--- a/WebTool-AI/Views/Assessor/Report.cshtml
+++ b/WebTool-AI/Views/Assessor/Report.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="zoom">
-    <a  data-toggle="modal" data-target="#myModal2" class="zoom-fab zoom-btn-large" id="zoomBtn"><i class="fa fa-2x fa-save"></i></a>
+    <a data-toggle="modal" data-target="#myModal2" class="zoom-fab zoom-btn-large" id="zoomBtn"><i class="fa fa-2x fa-save"></i></a>
 </div>
 <div class="row">
     <div class="header">
@@ -470,11 +470,22 @@
                                         <h4>CRITERIA #1</h4>
                                         <div class="col-lg-12">
                                             <h3>PART 1</h3><h6>LEVEL : <span class="text-warning">#1</span>  |  LEVEL OF EVIDENCE : <span class="text-warning">STRONG</span>  |  SCORE : <span class="text-warning">68</span></h6>
+                                            <button type="button" class="btn btn-info explanation" data-toggle="collapse" data-target="#demo">Show Explaination for the chose level</button>
+                                            <div id="demo" class="collapse">
+                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                            </div>
                                             <h5>Evidence:  <a href="#">Evidencefile.pdf</a></h5>
                                         </div>
                                         <div class="col-lg-12">
                                             <h3>PART 2</h3><h6>IMPACT SCORE : <span class="text-warning">68</span></h6><br />
-                                            <div>Pellentesque in ipsum id orci porta dapibus. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.</div>
+                                            <button type="button" class="btn btn-info explanation" data-toggle="collapse" data-target="#demo2">Show Explaination for Impact</button>
+                                            <div id="demo2" class="collapse">
+                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                            </div>
                                             <h5>Evidence:  <a href="#">Evidencefile.pdf</a></h5>
                                         </div>
                                     </div>
@@ -512,11 +523,22 @@
                                         <h4>CRITERIA #2</h4>
                                         <div class="col-lg-12">
                                             <h3>PART 1</h3><h6>LEVEL : <span class="text-warning">#1</span>  |  LEVEL OF EVIDENCE : <span class="text-warning">STRONG</span>  |  SCORE : <span class="text-warning">68</span></h6>
+                                            <button type="button" class="btn btn-info explanation" data-toggle="collapse" data-target="#demo3">Show Explaination for the chose level</button>
+                                            <div id="demo3" class="collapse">
+                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                            </div>
                                             <h5>Evidence:  <a href="#">Evidencefile.pdf</a></h5>
                                         </div>
                                         <div class="col-lg-12">
                                             <h3>PART 2</h3><h6>IMPACT SCORE : <span class="text-warning">68</span></h6><br />
-                                            <div>Pellentesque in ipsum id orci porta dapibus. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.</div>
+                                            <button type="button" class="btn btn-info explanation" data-toggle="collapse" data-target="#demo4">Show Explaination for Impact</button>
+                                            <div id="demo4" class="collapse">
+                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                            </div>
                                             <h5>Evidence:  <a href="#">Evidencefile.pdf</a></h5>
                                         </div>
                                     </div>
