--- a/WebTool-AI/Views/Home/CompanyReport.cshtml
+++ b/WebTool-AI/Views/Home/CompanyReport.cshtml
@@ -28,7 +28,7 @@
                 <div class="footer text-center">
                     <hr />
                     <div class="stats">
-                        <a href="#" class="btn btn-primary"><i class="ti-eye"></i> See Report</a>
+                        <a href="@Url.Action("EachAssessorReport","Home")" class="btn btn-primary"><i class="ti-eye"></i> See Report</a>
                     </div>
                 </div>
             </div>
@@ -48,7 +48,7 @@
                 <div class="footer text-center">
                     <hr />
                     <div class="stats">
-                        <a href="#" class="btn btn-primary"><i class="ti-eye"></i> See Report</a>
+                        <a href="@Url.Action("EachAssessorReport","Home")" class="btn btn-primary"><i class="ti-eye"></i> See Report</a>
                     </div>
                 </div>
             </div>
@@ -68,31 +68,9 @@
                 <div class="footer text-center">
                     <hr />
                     <div class="stats">
-                        <a href="#" class="btn btn-primary"><i class="ti-eye"></i> See Report</a>
+                        <a href="@Url.Action("EachAssessorReport","Home")" class="btn btn-primary"><i class="ti-eye"></i> See Report</a>
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row">
-    <div class="col-lg-6 col-sm-12">
-        <div class="header">
-            <h4 class="title">Priority Chart</h4>
-        </div>
-        <div class="card">
-            <div class="content">
-                <div id="chartdiv"></div>
-            </div>
-        </div>
-    </div>
-    <div class="col-lg-6 col-sm-12">
-        <div class="header">
-            <h4 class="title">Maturity Chart</h4>
-        </div>
-        <div class="card">
-            <div class="content">
-                <div id="chartdiv3"></div>
             </div>
         </div>
     </div>
