--- a/WebTool-AI/Content/Site.css
+++ b/WebTool-AI/Content/Site.css
@@ -332,3 +332,9 @@ footer hr {
 .centeritem{
     text-align:center;
 }
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
+
+.preserve-3d {
+    transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
+}
