--- a/WebTool-AI/Views/Home/CompanyReport.cshtml
+++ b/WebTool-AI/Views/Home/CompanyReport.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewBag.Title = "Dashboard";
 }
+<div class="zoom">
+    <a data-toggle="modal" data-target="#myModal2" class="zoom-fab zoom-btn-large" id="zoomBtn"><i class="fa fa-2x fa-save"></i></a>
+</div>
 <div class="row">
     <div class="col-lg-12">
         <h3>ABC COMPANY</h3>
@@ -103,27 +106,8 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Strategy (Out of 100)</td>
+                            <td>Final Score (Out of 100)</td>
                             <td><input type="text" placeholder="Enter Score..." /></td>
-                        </tr>
-                        <tr>
-                            <td>Maturity (Out of 100)</td>
-                            <td><input type="text" placeholder="Enter Score..." /></td>
-
-                        </tr>
-                        <tr>
-                            <td>Results (Out of 100)</td>
-                            <td><input type="text" placeholder="Enter Score..." /></td>
-
-                        </tr>
-                        <tr>
-                            <td>Linkage (Out of 100)</td>
-                            <td><input type="text" placeholder="Enter Score..." /></td>
-
-                        </tr>
-                        <tr>
-                            <td><h3>TOTAL</h3></td>
-                            <td><h3>74%</h3></td>
                         </tr>
                     </tbody>
                 </table>
