--- a/WebTool-AI/Views/Shared/_Layout.cshtml
+++ b/WebTool-AI/Views/Shared/_Layout.cshtml
@@ -34,13 +34,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
-                                <i class="ti-view-list-alt"></i>
-                                <p>Final Results</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
+                            <a href="@Url.Action("FinalNominees", "Home")">
                                 <i class="ti-check"></i>
                                 <p>Final Nominees</p>
                             </a>
