--- a/WebTool-AI/Content/paper-dashboard.css
+++ b/WebTool-AI/Content/paper-dashboard.css
@@ -4206,7 +4206,7 @@ textarea {
 }
 
 .zoom {
-    z-index:9999;
+    z-index: 9999;
     position: fixed;
     top: 55px;
     right: 24px;
@@ -4229,79 +4229,130 @@ textarea {
     color: #FFF;
 }
 
-.zoom-fab:hover {
-    background-color: #F3BB45;
-    color:wheat;
-    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.14), 0 1px 7px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -1px rgba(0, 0, 0, 0.2);
-}
+    .zoom-fab:hover {
+        background-color: #F3BB45;
+        color: wheat;
+        box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.14), 0 1px 7px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -1px rgba(0, 0, 0, 0.2);
+    }
 
 .zoom-btn-large {
     width: 60px;
     height: 60px;
     line-height: 65px;
 }
+
 .scale-transition {
     transition: transform 0.3s cubic-bezier(0.53, 0.01, 0.36, 1.63) !important;
 }
 
-.scale-transition.scale-out {
-    transform: scale(0);
-    transition: transform 0.2s !important;
+    .scale-transition.scale-out {
+        transform: scale(0);
+        transition: transform 0.2s !important;
+    }
+
+    .scale-transition.scale-in {
+        transform: scale(1);
+    }
+
+.indicatorp p {
+    padding: 1.85em;
 }
 
-.scale-transition.scale-in {
-    transform: scale(1);
+    .indicatorp p:first-child {
+        border-left: 2px solid red;
+        padding: 0;
+        padding-left: 1.85em;
+    }
+
+    .indicatorp p:nth-child(2) {
+        border-left: 2px solid #FF7900;
+    }
+
+    .indicatorp p:nth-child(3) {
+        border-left: 2px solid #FFD900;
+    }
+
+    .indicatorp p:last-child {
+        border-left: 2px solid green;
+    }
+
+.explanation {
+    margin-top: 20px;
 }
-.indicatorp p{
-    padding:1.85em;
+
+.level-desc {
+    border: 1px solid #b98b1a;
+    padding: 5px;
+    margin-top: 13px;
+    color: #b98b1a;
+    font-style: italic;
 }
-.indicatorp p:first-child {
-    border-left: 2px solid red;
-    padding:0;
-    padding-left: 1.85em;
-}
-.indicatorp p:nth-child(2) {
-    border-left: 2px solid #FF7900;
-}
-.indicatorp p:nth-child(3) {
-    border-left: 2px solid #FFD900;
-}
-.indicatorp p:last-child {
-    border-left: 2px solid green;
-}
-.explanation{
-    margin-top:20px;
-}
-.level-desc{
-    border:1px solid #b98b1a;
-    padding:5px;
-    margin-top:13px;
-    color:#b98b1a;
-    font-style:italic;
-}
+
 .result-desc {
     border: 1px solid #b98b1a;
     color: #b98b1a;
     font-style: italic;
-    font-size:12px;
+    font-size: 12px;
 }
+
 .hidden-text {
     display: none;
 }
+
 .level-desc:hover .hidden-text, .result-desc:hover .hidden-text {
     display: inline;
 }
+
 .level-desc:hover .readmore, .result-desc:hover .readmore {
     display: none;
 }
+
 #barchart {
     width: 100%;
     height: 500px;
     font-size: 11px;
-}						
-.displaychart{
-    display:block;
 }
+
+.displaychart {
+    display: block;
+}
+
 .hidechart {
     display: none;
+}
+
+.buttonsp {
+    width: 80%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-top: 1px solid #cfa219;
+    background: #b3811d;
+    background: -webkit-gradient(linear, left top, left bottom, from(#fadf2f), to(#b3811d));
+    background: -webkit-linear-gradient(top, #fadf2f, #b3811d);
+    background: -moz-linear-gradient(top, #fadf2f, #b3811d);
+    background: -ms-linear-gradient(top, #fadf2f, #b3811d);
+    background: -o-linear-gradient(top, #fadf2f, #b3811d);
+    padding: 20px 40px;
+    -webkit-border-radius: 40px;
+    -moz-border-radius: 40px;
+    border-radius: 40px;
+    -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+    -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+    box-shadow: rgba(0,0,0,1) 0 1px 0;
+    text-shadow: rgba(0,0,0,.4) 0 1px 0;
+    color: white;
+    font-size: 24px;
+    text-decoration: none;
+    transition: 0s;
+}
+
+.buttonsp:hover {
+    border-top-color: #b98c1a;
+    background: #b98c1a;
+    color: #ffffff;
+}
+
+.buttonsp:active {
+    border-top-color: #b98c1a;
+    background: #b98c1a;
 }
