--- a/WebTool-AI/Views/Login/Register.cshtml
+++ b/WebTool-AI/Views/Login/Register.cshtml
@@ -61,10 +61,11 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h5>COMPANY SCALE</h5>
-                        <input type="radio" id="r1" name="rr" />
-                        <label for="r1"><span></span>Small/Medium Scale @*<small><i class="fa fa-info-circle"></i><a href="#" data-toggle="modal" data-target="#myModal">&nbsp; Payment Terms</a></small>*@</label>
-                        <input type="radio" id="r2" name="rr" />
-                        <label for="r2"><span></span>Large Scale @*<small><i class="fa fa-info-circle"></i><a href="#" data-toggle="modal" data-target="#myModal">&nbsp; Payment Terms</a></small>*@</label>
+                        <input type="radio" id="r12" name="rr1" />
+                        <label for="r12"><span></span>Small/Medium Scale</label>
+                        <input type="radio" id="r22" name="rr1" />
+                        <label for="r22"><span></span>Large Scale</label>
+
                     </div>
                 </div>
                 <h4 class="paddintop40">PRIMARY CONTACT REPRESENTATIVE</h4>
