--- a/WebTool-AI/Views/Shared/Assessor.cshtml
+++ b/WebTool-AI/Views/Shared/Assessor.cshtml
@@ -9,6 +9,8 @@
     @Styles.Render("~/Content/tablecss")
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/themes/base/css")
+    @Styles.Render("~/Content/bootstrap/rtl")
+
 </head>
 <body>
     <body>
@@ -81,8 +83,8 @@
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <i class="ti-settings"></i>
-                                        <p>Settings</p>
+                                        <i class="ti-world"></i>
+                                        <p>العربية</p>
                                     </a>
                                 </li>
                                 <li class="dropdown">
@@ -143,6 +145,7 @@
 
 
     </body>
+    @Scripts.Render("~/bundles/rtljs")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryui")
     @Scripts.Render("~/bundles/bootstrap")
