--- a/WebTool-AI/Views/Shared/User.cshtml
+++ b/WebTool-AI/Views/Shared/User.cshtml
@@ -9,6 +9,7 @@
     @Styles.Render("~/Content/tablecss")
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/themes/base/css")
+    @Styles.Render("~/Content/bootstrap/rtl")
 
 </head>
 <body>
@@ -94,8 +95,8 @@
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <i class="ti-settings"></i>
-                                        <p>Settings</p>
+                                        <i class="ti-world"></i>
+                                        <p>العربية</p>
                                     </a>
                                 </li>
                                 <li class="dropdown">
