--- a/WebTool-AI/Content/css/login-rtl.css
+++ b/WebTool-AI/Content/css/login-rtl.css
@@ -4,7 +4,7 @@
     background: url(../../Images/bglogin.jpg) no-repeat;
     background-size: cover; /* <------ */
     background-repeat: no-repeat;
-    background-position:50% 40%;
+    background-position: 50% 40%;
 }
 
 .loginrow {
@@ -19,6 +19,7 @@
     font-family: 'Poppins', sans-serif;
     margin-bottom: 30px;
 }
+
 .registerrow {
     max-width: 700px;
     margin: 0 auto;
@@ -51,9 +52,9 @@
 }
 
 .login-logo {
-    margin-top:30px;
+    margin-top: 30px;
     max-height: 100px;
-    padding-left:20px;
+    padding-left: 20px;
 }
 
 .login-heading {
@@ -178,7 +179,7 @@ label {
     border: none;
     border-radius: 20px;
     margin-top: -8px;
-    color:white;
+    color: white;
 }
 
 .btn-animate {
@@ -230,32 +231,38 @@ a.btn-signup:hover, a.btn-signin:hover {
     transition: all 0.5s ease;
 }
 
-.forgot a {
-    color: rgba(0,0,0,.3);
-    font-weight: 400;
-    font-size: 13px;
-    text-decoration: none;
-}
+    .forgot a {
+        color: rgba(0,0,0,.3);
+        font-weight: 400;
+        font-size: 13px;
+        text-decoration: none;
+    }
+
 .registerp a {
     color: #775F28 !important;
     font-weight: bold;
 }
-.registerp a:hover, .registerp a:focus {
-    color: #f79820 !important;
-    font-weight: bold;
-    text-decoration: none;
-}
+
+    .registerp a:hover, .registerp a:focus {
+        color: #f79820 !important;
+        font-weight: bold;
+        text-decoration: none;
+    }
+
 .registerp {
     text-transform: uppercase;
     text-align: center;
 }
+
 .register-logo {
     margin-top: 50px;
     max-height: 70px;
 }
+
 .register-form {
     padding: 4vmin 10vmin;
 }
+
 input[type="checkbox"] {
     display: none;
 }
@@ -270,12 +277,12 @@ input[type="checkbox"] {
             height: 25px;
             margin: -2px 10px 0 0;
             vertical-align: middle;
-            background: url(../Images/1checkbox.png);
+            background: url(../../Images/1checkbox.png);
             cursor: pointer;
         }
 
     input[type="checkbox"]:checked + label span {
-        background: url(../Images/3checkbox.png);
+        background: url(../../Images/3checkbox.png);
     }
 
 input[type="radio"] {
@@ -292,12 +299,12 @@ input[type="radio"] {
             height: 25px;
             margin: -2px 10px 0 0;
             vertical-align: middle;
-            background: url(../Images/1checkbox.png);
+            background: url(../../Images/1checkbox.png);
             cursor: pointer;
         }
 
     input[type="radio"]:checked + label span {
-        background: url(../Images/4checkbox.png);
+        background: url(../../Images/4checkbox.png);
     }
 
 .paddintop10 {
