--- a/WebTool-AI/Views/Shared/_Login.cshtml
+++ b/WebTool-AI/Views/Shared/_Login.cshtml
@@ -8,6 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
     @Styles.Render("~/Content/logincss")
     @Scripts.Render("~/bundles/modernizr")
+    @Styles.Render("~/Content/bootstrap/loginrtl")
+
+
 </head>
 <body>
     <div class="container body-content">
