--- a/WebTool-AI/Content/css/custom-rtl.css
+++ b/WebTool-AI/Content/css/custom-rtl.css
@@ -3809,7 +3809,7 @@ textarea.form-control {
 }
 
 ::-webkit-scrollbar {
-    width: 0.3em;
+    width: 0.7em;
 }
 
 ::-webkit-scrollbar-track {
@@ -3817,7 +3817,7 @@ textarea.form-control {
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #;
+    background-color: #b98b1a;
     outline: 1px solid slategrey;
 }
 
@@ -4211,7 +4211,7 @@ textarea {
     z-index: 9999;
     position: fixed;
     top: 55px;
-    right: 24px;
+    left: 24px !important;
     height: 70px;
 }
 
